--- a/UtilesCMonEx/src/intranetConsultasME.properties
+++ b/UtilesCMonEx/src/intranetConsultasME.properties
@@ -3,4 +3,4 @@
 #WL8.1
 #URL_WS=http://clustest/RentaMasivaWS/WSRentaMasivaME.jws?WSDL
 #DATAPOWER - BUSINTERNO
-URL_WS=http://dptest.tesoreria.cl:9120/RentaMasivaWS/WSRentaMasivaME.jws
+URL_WS=http://localhost:8080/RentaMasivaWS/WSRentaMasivaME.jws
