--- a/ConsultasME/pom.xml
+++ b/ConsultasME/pom.xml
@@ -2,28 +2,18 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>cl.gob.tgr.monex</groupId>
+
+	<parent>
+		<groupId>cl.gob.tgr.monex</groupId>
+		<artifactId>intranetConsultasMEApp</artifactId>
+		<version>1.0.0</version>
+	</parent>
+
+
+	<groupId>intranetconsultasme.webapplication</groupId>
 	<artifactId>ConsultasME</artifactId>
 	<version>1.0.0</version>
 	<packaging>war</packaging>
-	
-	<repositories>
-		<repository>
-			<id>maven-group</id>
-			<url>http://ec2-3-229-82-198.compute-1.amazonaws.com:8081/artifactory/tesoreria-releases</url>
-		</repository>
-	</repositories>
-  
-  	<distributionManagement>
-		<snapshotRepository>
-			<id>nexus-snapshots</id>
-			<url>hhttp://ec2-3-229-82-198.compute-1.amazonaws.com:8081/artifactory/tesoreria-snapshots</url>
-		</snapshotRepository>
-		<repository>
-			<id>nexus-releases</id>
-			<url>http://ec2-3-229-82-198.compute-1.amazonaws.com:8081/artifactory/tesoreria-releases</url>
-		</repository>
-	</distributionManagement>
 
 	
 	<build>
@@ -125,25 +115,26 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>cl.gob.tgr.monex</groupId>
-			<artifactId>MensajeME</artifactId>
-			<version>1.0.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>cl.gob.tgr.monex</groupId>
-			<artifactId>PkgCMonExEJB</artifactId>
-			<version>1.0.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>cl.gob.tgr.monex</groupId>
+			<groupId>cl.tesoreria.monex.utiles</groupId>
 			<artifactId>UtilesCMonEx</artifactId>
 			<version>1.0.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>cl.gob.tgr.monex</groupId>
+			<groupId>cl.tesoreria.sii.msgSII</groupId>
+			<artifactId>MensajeME</artifactId>
+			<version>1.0.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>cl.tesoreria.monex</groupId>
+			<artifactId>PkgCMonExEJB</artifactId>
+			<version>1.0.0</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>cl.tesoreria.monex.pkgconsultasmonex</groupId>
 			<artifactId>PkgConsultasMonExEJB</artifactId>
 			<version>1.0.0</version>
 			<scope>provided</scope>
