--- a/PkgConsultasMonExEJB/pom.xml
+++ b/PkgConsultasMonExEJB/pom.xml
@@ -2,28 +2,19 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>cl.gob.tgr.monex</groupId>
+
+	<parent>
+		<groupId>cl.gob.tgr.monex</groupId>
+		<artifactId>intranetConsultasMEApp</artifactId>
+		<version>1.0.0</version>
+	</parent>
+
+
+	<groupId>cl.tesoreria.monex.pkgconsultasmonex</groupId>
 	<artifactId>PkgConsultasMonExEJB</artifactId>
 	<version>1.0.0</version>
 	<packaging>ejb</packaging>
 	
-	<repositories>
-		<repository>
-			<id>maven-group</id>
-			<url>http://ec2-3-229-82-198.compute-1.amazonaws.com:8081/artifactory/tesoreria-releases</url>
-		</repository>
-	</repositories>
-  
-  	<distributionManagement>
-		<snapshotRepository>
-			<id>nexus-snapshots</id>
-			<url>hhttp://ec2-3-229-82-198.compute-1.amazonaws.com:8081/artifactory/tesoreria-snapshots</url>
-		</snapshotRepository>
-		<repository>
-			<id>nexus-releases</id>
-			<url>http://ec2-3-229-82-198.compute-1.amazonaws.com:8081/artifactory/tesoreria-releases</url>
-		</repository>
-	</distributionManagement>
 	
 	<build>
 		<finalName>PkgConsultasMonExEJB</finalName>
@@ -80,19 +71,21 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>cl.gob.tgr.monex</groupId>
+			<groupId>cl.tesoreria.sii.msgSII</groupId>
 			<artifactId>MensajeME</artifactId>
 			<version>1.0.0</version>
 		</dependency>
 		<dependency>
-			<groupId>cl.gob.tgr.monex</groupId>
-			<artifactId>PkgCMonExEJB</artifactId>
-			<version>1.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>cl.gob.tgr.monex</groupId>
+			<groupId>cl.tesoreria.monex.utiles</groupId>
 			<artifactId>UtilesCMonEx</artifactId>
 			<version>1.0.0</version>
+		</dependency>		
+		<dependency>
+			<groupId>cl.tesoreria.monex</groupId>
+			<artifactId>PkgCMonExEJB</artifactId>
+			<version>1.0.0</version>
+			<type>ejb</type>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
