--- a/MensajeME/pom.xml
+++ b/MensajeME/pom.xml
@@ -2,15 +2,14 @@
   <modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>cl.gob.tgr.monex</groupId>
+		<groupId>cl.tesoreria.monex</groupId>
 		<artifactId>intranetConsultasMEApp</artifactId>
-		<version>1.0.0</version>
+		<version>2.0.0.0</version>
 	</parent>
 
 
   <groupId>cl.tesoreria.sii.msgSII</groupId>
   <artifactId>MensajeME</artifactId>
-  <version>1.0.0</version>
   <packaging>jar</packaging>
   
 
