--- a/PkgCMonExEJB/pom.xml
+++ b/PkgCMonExEJB/pom.xml
@@ -4,14 +4,13 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>cl.gob.tgr.monex</groupId>
+		<groupId>cl.tesoreria.monex</groupId>
 		<artifactId>intranetConsultasMEApp</artifactId>
-		<version>1.0.0</version>
+		<version>2.0.0.0</version>
 	</parent>
 
 	<groupId>cl.tesoreria.monex</groupId>
 	<artifactId>PkgCMonExEJB</artifactId>
-	<version>1.0.0</version>
 	<packaging>ejb</packaging>
 	
 	<build>
@@ -45,6 +44,12 @@
 	</build>
 	<dependencies>
 		<dependency>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		    <version>1.2.17</version>
+		    <scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>cl.gob.tgr.monex</groupId>
 			<artifactId>javaee-api-7.0</artifactId>
 			<version>1.0.0</version>
@@ -62,16 +67,11 @@
 			<version>1.0.0</version>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
-			<groupId>cl.gob.tgr.monex</groupId>
-			<artifactId>log4j-1.2.17</artifactId>
-			<version>1.0.0</version>
-			<scope>provided</scope>
-		</dependency>
+
 		<dependency>
 			<groupId>cl.tesoreria.sii.msgSII</groupId>
 			<artifactId>MensajeME</artifactId>
-			<version>1.0.0</version>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 </project>
