--- a/PkgConsultasMonExEJB/pom.xml
+++ b/PkgConsultasMonExEJB/pom.xml
@@ -4,15 +4,14 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>cl.gob.tgr.monex</groupId>
+		<groupId>cl.tesoreria.monex</groupId>
 		<artifactId>intranetConsultasMEApp</artifactId>
-		<version>1.0.0</version>
+		<version>2.0.0.0</version>
 	</parent>
 
 
 	<groupId>cl.tesoreria.monex.pkgconsultasmonex</groupId>
 	<artifactId>PkgConsultasMonExEJB</artifactId>
-	<version>1.0.0</version>
 	<packaging>ejb</packaging>
 	
 	
@@ -59,31 +58,35 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>cl.gob.tgr.monex</groupId>
-			<artifactId>log4j-1.2.17</artifactId>
-			<version>1.0.0</version>
-			<scope>provided</scope>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		    <version>1.2.17</version>
+		    <scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>cl.gob.tgr.monex</groupId>
+ 			<groupId>oracle</groupId>
 			<artifactId>ojdbc6</artifactId>
-			<version>1.0.0</version>
+			<version>12.1.0.2.0</version>
 			<scope>provided</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>cl.tesoreria.sii.msgSII</groupId>
 			<artifactId>MensajeME</artifactId>
-			<version>1.0.0</version>
+			<version>${project.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>cl.tesoreria.monex.utiles</groupId>
 			<artifactId>UtilesCMonEx</artifactId>
-			<version>1.0.0</version>
-		</dependency>		
+			<version>${project.version}</version>
+			<scope>provided</scope>
+		</dependency>
+			
 		<dependency>
 			<groupId>cl.tesoreria.monex</groupId>
 			<artifactId>PkgCMonExEJB</artifactId>
-			<version>1.0.0</version>
+			<version>${project.version}</version>
 			<type>ejb</type>
 			<scope>provided</scope>
 		</dependency>
