--- a/UtilesCMonEx/pom.xml
+++ b/UtilesCMonEx/pom.xml
@@ -4,15 +4,14 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>cl.gob.tgr.monex</groupId>
+		<groupId>cl.tesoreria.monex</groupId>
 		<artifactId>intranetConsultasMEApp</artifactId>
-		<version>1.0.0</version>
+		<version>2.0.0.0</version>
 	</parent>
 
 
 	<groupId>cl.tesoreria.monex.utiles</groupId>
 	<artifactId>UtilesCMonEx</artifactId>
-	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<build>
@@ -50,10 +49,11 @@
 			<version>1.0.0</version>
 			<scope>provided</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>cl.tesoreria.sii.msgSII</groupId>
 			<artifactId>MensajeME</artifactId>
-			<version>1.0.0</version>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 </project>
