--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
-	<groupId>cl.gob.tgr.monex</groupId>
+	<groupId>cl.tesoreria.monex</groupId>
 	<artifactId>intranetConsultasMEApp</artifactId>
-	<version>1.0.0</version>
+	<version>2.0.0.0</version>
 	<packaging>pom</packaging>
 	<name>Consulta Moneda Extranjera Web Application</name>
 	
