--- a/ConsultasME/pom.xml
+++ b/ConsultasME/pom.xml
@@ -48,35 +48,119 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>cl.gob.tgr.monex</groupId>
-			<artifactId>xmlbeans-3.0.0</artifactId>
-			<version>1.0.0</version>
-			<scope>provided</scope>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		    <version>1.2.17</version>
+		    <scope>provided</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>cl.gob.tgr.monex</groupId>
 			<artifactId>axis</artifactId>
 			<version>1.0.0</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>cl.gob.tgr.monex</groupId>
-			<artifactId>beehive-netui-tags</artifactId>
-			<version>1.0.0</version>
-			<scope>provided</scope>
+		    <groupId>cl.gob.tgr.monex</groupId>
+		    <artifactId>beehive-controls</artifactId>
+		    <version>1.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>cl.gob.tgr.monex</groupId>
 			<artifactId>beehive-netui-core</artifactId>
 			<version>1.0.0</version>
-			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>cl.gob.tgr.monex</groupId>
+			<artifactId>beehive-netui-tags</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>cl.gob.tgr.monex</groupId>
+		    <artifactId>commons-beanutils</artifactId>
+		    <version>1.0.0</version>
+		</dependency>		
+		<dependency>
+		    <groupId>cl.gob.tgr.monex</groupId>
+		    <artifactId>commons-codec-1.3</artifactId>
+		    <version>1.0.0</version>
+		</dependency>	
+		<dependency>
+		    <groupId>cl.gob.tgr.monex</groupId>
+		    <artifactId>commons-digester</artifactId>
+		    <version>1.0.0</version>
+		</dependency>	
+		<dependency>
+		    <groupId>cl.gob.tgr.monex</groupId>
+		    <artifactId>commons-discovery-0.2</artifactId>
+		    <version>1.0.0</version>
+		</dependency>	
+		<dependency>
+		    <groupId>cl.gob.tgr.monex</groupId>
+		    <artifactId>commons-el</artifactId>
+		    <version>1.0.0</version>
+		</dependency>	
+		<dependency>
+		    <groupId>cl.gob.tgr.monex</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.0.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>cl.gob.tgr.monex</groupId>
+		    <artifactId>commons-logging</artifactId>
+		    <version>1.0.0</version>
+		</dependency>		
+		<dependency>
+		    <groupId>cl.gob.tgr.monex</groupId>
+		    <artifactId>commons-validator</artifactId>
+		    <version>1.0.0</version>
+		</dependency>		
+		<dependency>
+		    <groupId>cl.gob.tgr.monex</groupId>
+		    <artifactId>jakarta-oro</artifactId>
+		    <version>1.0.0</version>
+		</dependency>		
+		<dependency>
+		    <groupId>cl.gob.tgr.monex</groupId>
+		    <artifactId>jaxrpc</artifactId>
+		    <version>1.0.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>cl.gob.tgr.monex</groupId>
+		    <artifactId>jstl</artifactId>
+		    <version>1.0.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>cl.gob.tgr.monex</groupId>
+		    <artifactId>netui-tags-databinding</artifactId>
+		    <version>1.0.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>cl.gob.tgr.monex</groupId>
+		    <artifactId>saaj</artifactId>
+		    <version>1.0.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>cl.gob.tgr.monex</groupId>
+		    <artifactId>standard</artifactId>
+		    <version>1.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>cl.gob.tgr.monex</groupId>
 			<artifactId>struts</artifactId>
 			<version>1.0.0</version>
-			<scope>provided</scope>
 		</dependency>
+		<dependency>
+		    <groupId>cl.gob.tgr.monex</groupId>
+		    <artifactId>velocity-dep-1.4</artifactId>
+		    <version>1.0.0</version>
+		</dependency>		
+		<dependency>
+		    <groupId>cl.gob.tgr.monex</groupId>
+		    <artifactId>xmlbeans-3.0.0</artifactId>
+		    <version>1.0.0</version>
+		</dependency>
+
+		
 		<dependency>
 			<groupId>cl.gob.tgr.monex</groupId>
 			<artifactId>javaee-api-7.0</artifactId>
@@ -89,12 +173,8 @@
 			<version>1.0.0</version>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
-			<groupId>cl.gob.tgr.monex</groupId>
-			<artifactId>log4j-1.2.17</artifactId>
-			<version>1.0.0</version>
-			<scope>provided</scope>
-		</dependency>
+	
+		
 		<dependency>
 			<groupId>cl.gob.tgr.monex</groupId>
 			<artifactId>utilSecutiry81-2.0</artifactId>
@@ -113,7 +193,6 @@
 			<version>1.0.0</version>
 			<scope>provided</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>cl.tesoreria.sii.msgSII</groupId>
 			<artifactId>MensajeME</artifactId>
