script generado de imagen docker

--- a/Docker/intranetConsultasME.properties
+++ b/Docker/intranetConsultasME.properties
@@ -4,7 +4,7 @@
 #URL_WS=http://clustest/RentaMasivaWS/WSRentaMasivaME.jws?WSDL
 #DATAPOWER - BUSINTERNO
 #URL_WS=http://localhost:8080/RentaMasivaWS/WSRentaMasivaME.jws
-WS.ENDPOINT.URL.WSRENTAMASIVAME=http://localhost:8080/RentaMasivaWS/WSRentaMasivaME.jws
+WS.ENDPOINT.URL.WSRENTAMASIVAME=http://192.168.14.201:8080/RentaMasivaWS/WSRentaMasivaME.jws
 JNDI.DATASOURCE.RECA=java:/jdbc/recaDS
 JNDI.DATASOURCE.BEA816=java:/jdbc/bea816DS
 JNDI.DATASOURCE.SII=java:/jdbc/siiDS
