--- a/intranetConsultasME/pom.xml
+++ b/intranetConsultasME/pom.xml
@@ -209,21 +209,19 @@
 		    <version>1.0.0</version>
 			<scope>provided</scope>
 		</dependency>
-		
-		
-		
-		
+		<dependency>
+			<groupId>cl.gob.tgr.monex</groupId>
+			<artifactId>lib-tesoreria16-2.1</artifactId>
+			<version>1.0.0</version>
+			<scope>provided</scope>
+		</dependency>			
 		
 		<dependency>
 			<groupId>cl.gob.tgr.monex</groupId>
 			<artifactId>javaee-api-7.0</artifactId>
 			<version>1.0.0</version>
 		</dependency>
-		<dependency>
-			<groupId>cl.gob.tgr.monex</groupId>
-			<artifactId>lib-tesoreria16-2.1</artifactId>
-			<version>1.0.0</version>
-		</dependency>
+
 		<dependency>
 			<groupId>cl.gob.tgr.monex</groupId>
 			<artifactId>utilSecutiry81-2.0</artifactId>
